unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Gain_Loss_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Gain_Loss_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the GL Account used for A/R transactions</description>
    <inlineHelpText>Identifies the GL Account used for A/R transactions</inlineHelpText>
    <label>Gain/Loss Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Items (Gain/Loss Account)</relationshipLabel>
    <relationshipName>Items3</relationshipName>
    <type>Lookup</type>
</CustomField>