unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Image_Path__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Image_Path__c</fullName>
    <defaultValue>&quot;https://s3.us-east-1.amazonaws.com/fonteva-customer-media/00D1U000000FLVyUAO/WcRwRzNr_placeholder_svg&quot;</defaultValue>
    <description>URL path of the image you want to display for this item</description>
    <inlineHelpText>URL path of the image you want to display for this item</inlineHelpText>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>