unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Income_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Income_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The credit account to use when posting revenue in a A/R transaction.</description>
    <inlineHelpText>The credit account to use when posting revenue in a A/R transaction.</inlineHelpText>
    <label>Income Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Items (Income Account)</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>