unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Inventory__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Inventory__c</fullName>
    <description>This field defines the number of remaining inventory for the item.</description>
    <inlineHelpText>This field defines the number of remaining inventory for the item.</inlineHelpText>
    <label>RESERVED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>