unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Inventory_Message__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Inventory_Message__c</fullName>
    <description>Text populated in this field will be shown as an inventory alert on the item&#39;s detail page.</description>
    <inlineHelpText>Text populated in this field will be shown as an inventory alert on the item&#39;s detail page.</inlineHelpText>
    <label>Inventory Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>