unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Item is considered available for sale and will be made available for selection against Invoice, Sales Order, Receipt, and EPayment Lines. Defaults checked.</description>
    <inlineHelpText>When checked, the Item is considered available for sale and will be made available for selection against Invoice, Sales Order, Receipt, and EPayment Lines. Defaults checked.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>