unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Is_Default_Shipping_Rate__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Default_Shipping_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to make this the Default Shipping Rate.</description>
    <inlineHelpText>Select the checkbox to make this the Default Shipping Rate. This default is used when there is no other applicable rate for an item that requires shipping.</inlineHelpText>
    <label>Is Default Shipping Rate</label>
    <type>Checkbox</type>
</CustomField>