unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Is_Default_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Default_Tax_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox when using the same tax rate for items regardless of the purchaser&#39;s locale.</description>
    <inlineHelpText>Select this checkbox when using the same tax rate for items regardless of the purchaser&#39;s locale.</inlineHelpText>
    <label>Is Default Tax Rate</label>
    <type>Checkbox</type>
</CustomField>