unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Is_Downloadable__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Downloadable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated Override ** Enable downloadable specific controls and features for this Item. Defaults to the value of the same field on the Item&#39;s related Item Class.</description>
    <inlineHelpText>** System Calculated Override ** Enable downloadable specific controls and features for this Item. Defaults to the value of the same field on the Item&#39;s related Item Class.</inlineHelpText>
    <label>Is Downloadable</label>
    <type>Checkbox</type>
</CustomField>