unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Is_Shipping_Rate__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Shipping_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to create a Shipping Rate.</description>
    <inlineHelpText>Select the checkbox to create a Shipping Rate.</inlineHelpText>
    <label>Is Shipping Rate</label>
    <type>Checkbox</type>
</CustomField>