unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Is_Tax__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies the Item to be used as a taxes rate to be applied to taxable items.</description>
    <inlineHelpText>Identifies the Item to be used as a taxes rate to be applied to taxable items.</inlineHelpText>
    <label>Is Tax</label>
    <type>Checkbox</type>
</CustomField>