unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__ISBN__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__ISBN__c</fullName>
    <description>An ISBN (International Standard Book Number) is a unique 10 or 13-digit Global Trade Item Number used to identify books and publications.</description>
    <inlineHelpText>An ISBN (International Standard Book Number) is a unique 10 or 13-digit Global Trade Item Number used to identify books and publications.</inlineHelpText>
    <label>ISBN</label>
    <length>13</length>
    <type>Text</type>
</CustomField>