unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reserved for future use.</description>
    <inlineHelpText>Reserved for future use.</inlineHelpText>
    <label>RESERVED</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>