unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to related Item Class</description>
    <inlineHelpText>** Required ** Link to related Item Class</inlineHelpText>
    <label>Item Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>