unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Item_Weight__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Weight__c</fullName>
    <description>** Conditionally Required ** The weight of one Item unit. Required if &quot;Requires Shipping&quot; is checked.</description>
    <inlineHelpText>** Conditionally Required ** The weight of one Item unit. Required if &quot;Requires Shipping&quot; is checked.</inlineHelpText>
    <label>Item Weight</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>