unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Item_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Weight_UOM__c</fullName>
    <description>** Conditionally Required ** The UOM (Unit of Measure) used to calculate the value of the &quot;Item Weight&quot; field. Required when &quot;Requires Shipping&quot; is checked.</description>
    <inlineHelpText>** Conditionally Required ** The UOM (Unit of Measure) used to calculate the value of the &quot;Item Weight&quot; field. Required when &quot;Requires Shipping&quot; is checked.</inlineHelpText>
    <label>Item Weight UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gram</fullName>
            </value>
            <value>
                <fullName>Kilogram</fullName>
            </value>
            <value>
                <fullName>Milligram</fullName>
            </value>
            <value>
                <fullName>Ounce</fullName>
            </value>
            <value>
                <fullName>Pound</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Subscriber</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Ticket</fullName>
            </value>
            <value>
                <fullName>Seat</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>