unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Line_Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Line_Description__c</fullName>
    <description>The description for the item as it should appear on related receipts and invoices. This field is limited to 255 characters.</description>
    <inlineHelpText>The description for the item as it should appear on related receipts and invoices. This field is limited to 255 characters.</inlineHelpText>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>