unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Maximum_Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Maximum_Number_of_Assignments__c</fullName>
    <description>** Conditionally Required ** If &quot;Restrict Number of Assignments&quot; is checked, a maximum number of assignments must be defined.</description>
    <inlineHelpText>** Conditionally Required ** If &quot;Restrict Number of Assignments&quot; is checked, a maximum number of assignments must be defined.</inlineHelpText>
    <label>Maximum Number of Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>