unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Maximum_Number_of_Downloads__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Maximum_Number_of_Downloads__c</fullName>
    <description>** Conditionally Required ** The value of this field will be used to restrict the number of times a customer can access a downloadable file via the API. Valid for &quot;Is Downloadable&quot; Items. Required when &quot;Restrict Number of Downloads&quot; is checked.</description>
    <inlineHelpText>** Conditionally Required ** The value of this field will be used to restrict the number of times a customer can access a downloadable file via the API. Valid for &quot;Is Downloadable&quot; Items. Required when &quot;Restrict Number of Downloads&quot; is checked.</inlineHelpText>
    <label>Maximum Number of Downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>