unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Maximum_Weight__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Maximum_Weight__c</fullName>
    <description>Defines the high end of the range of item weights this shipping rate applies to.</description>
    <inlineHelpText>Set the high end of the range of item weights this Shipping Rate applies to.</inlineHelpText>
    <label>Maximum Weight</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>