unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Minimum_Value__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Minimum_Value__c</fullName>
    <description>Set the low end of the range of item values this shipping rate applies to.</description>
    <inlineHelpText>Set the low end of the range of item values this shipping rate applies to.</inlineHelpText>
    <label>Minimum Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>