unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Minimum_Weight__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Minimum_Weight__c</fullName>
    <description>Defines the low end of the range of item weights this shipping rate applies to.</description>
    <inlineHelpText>Set the low end of the range of item weights this Shipping Rate applies to.</inlineHelpText>
    <label>Minimum Weight</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>