unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Not_For_Individual_Sale__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Not_For_Individual_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Item will be restricted to only being included in sales as part of a Package Item. Defaults unchecked.</description>
    <inlineHelpText>When checked, the Item will be restricted to only being included in sales as part of a Package Item. Defaults unchecked.</inlineHelpText>
    <label>Not For Individual Sale</label>
    <type>Checkbox</type>
</CustomField>