unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Package_Items__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Package_Items__c</fullName>
    <description>This field aggregates the total number of package items.</description>
    <inlineHelpText>This field aggregates the total number of package items.</inlineHelpText>
    <label>Package Items</label>
    <summaryForeignKey>OrderApi__Package_Item__c.OrderApi__Package__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>