unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Parent_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to define the parent item used in bundles, items with attributes, and other advanced item options.</description>
    <inlineHelpText>This field is used to define the parent item used in bundles, items with attributes, and other advanced item options.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>