unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Price__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Price__c</fullName>
    <description>The default price for the item will be used to automatically create the default price rule which can only be edited by updating the price of the item.</description>
    <inlineHelpText>The default price for the item will be used to automatically create the default price rule which can only be edited by updating the price of the item.</inlineHelpText>
    <label>Item Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>