unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Refund_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Refund_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account to debit when refunding/crediting customers who have purchased this Item.</description>
    <inlineHelpText>The account to debit when refunding/crediting customers who have purchased this Item.</inlineHelpText>
    <label>Refund/Credit Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Items (Refund_Account)</relationshipLabel>
    <relationshipName>Refund_Account_Items</relationshipName>
    <type>Lookup</type>
</CustomField>