unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Renewal_Form__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Renewal_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When defined, the member will be presented with this form as the first step during renewals.</description>
    <inlineHelpText>When defined, the member will be presented with this form as the first step during renewals.</inlineHelpText>
    <label>Renewal Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Renewed Items</relationshipLabel>
    <relationshipName>RenewedItems</relationshipName>
    <type>Lookup</type>
</CustomField>