unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Require_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Require_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a user will be unable to complete a sale for an Item until all assignments available have been entered. Defaults unchecked.</description>
    <inlineHelpText>When checked, a user will be unable to complete a sale for an Item until all assignments available have been entered. Defaults unchecked.</inlineHelpText>
    <label>Require Assignments</label>
    <type>Checkbox</type>
</CustomField>