unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Require_PreAuthorized_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Require_PreAuthorized_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** Used with extended applications ** By checking this field, purchasing this item will required pre-authorization before being charged by a subsequent action.</description>
    <inlineHelpText>** Used with extended applications ** By checking this field, purchasing this item will required pre-authorization before being charged by a subsequent action.</inlineHelpText>
    <label>Require PreAuthorized Payment</label>
    <type>Checkbox</type>
</CustomField>