unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Require_Shipping__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Require_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated Override ** Enable delivery specific controls and features for this Item. Defaults to the value of the same field on the Item&#39;s related Item Class.</description>
    <inlineHelpText>** System Calculated Override ** Enable delivery specific controls and features for this Item. Defaults to the value of the same field on the Item&#39;s related Item Class.</inlineHelpText>
    <label>Require Shipping</label>
    <type>Checkbox</type>
</CustomField>