unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Required_Package_Items__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Required_Package_Items__c</fullName>
    <description>This field aggregates the total number of required package items needed to fulfill a sales order with this item.</description>
    <inlineHelpText>This field aggregates the total number of required package items needed to fulfill a sales order with this item.</inlineHelpText>
    <label>Required Package Items</label>
    <summaryFilterItems>
        <field>OrderApi__Package_Item__c.OrderApi__Is_Required__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderApi__Package_Item__c.OrderApi__Minimum_Quantity__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Package_Item__c.OrderApi__Package__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>