unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Restrict_Number_of_Downloads__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Restrict_Number_of_Downloads__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the customer will have access restricted if the downloadable file has been accessed more than the allowed amount defined in the &quot;Maximum Number of Downloads&quot; field. Defaults unchecked.</description>
    <inlineHelpText>When checked, the customer will have access restricted if the downloadable file has been accessed more than the allowed amount defined in the &quot;Maximum Number of Downloads&quot; field. Defaults unchecked.</inlineHelpText>
    <label>Restrict Number of Downloads</label>
    <type>Checkbox</type>
</CustomField>