unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Revenue_Recognition_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Revenue_Recognition_Date__c</fullName>
    <label>Revenue Recognition Date</label>
    <type>Date</type>
</CustomField>