unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Revenue_Recognition_Rule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Revenue_Recognition_Rule__c</fullName>
    <label>Revenue Recognition Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Over Time</fullName>
            </value>
            <value>
                <fullName>Specific Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>