unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to select a Delivery Method associated with this rate.</description>
    <inlineHelpText>Select the Delivery Method associated with this rate.</inlineHelpText>
    <label>Delivery Method</label>
    <referenceTo>OrderApi__Shipping_Method__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>