unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Shipping_Region__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to select the Shipping Region associated with this rate.</description>
    <inlineHelpText>Select the Shipping Region associated with this rate.</inlineHelpText>
    <label>Shipping Region</label>
    <referenceTo>OrderApi__Shipping_Region__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>