unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__SKU__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__SKU__c</fullName>
    <description>A SKU (Stock Keeping Unit) is a unique Item identifier that references attributes associated with the Item and that distinguish it from all other Items primarily used for inventory control and management.</description>
    <inlineHelpText>A SKU (Stock Keeping Unit) is a unique Item identifier that references attributes associated with the Item and that distinguish it from all other Items primarily used for inventory control and management.</inlineHelpText>
    <label>SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>