unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Subscription_Plan_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Plan_Display_Label__c</fullName>
    <description>The label to display in the wizard for the step related to selecting a subscription plan.</description>
    <inlineHelpText>The label to display in the wizard for the step related to selecting a subscription plan.</inlineHelpText>
    <label>Subscription Plan Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>