unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Tax_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Tax_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populate this field for an item that needs to apply a tax.</description>
    <inlineHelpText>Populate this field for an item that needs to apply a tax.</inlineHelpText>
    <label>Tax Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Tax Items</relationshipLabel>
    <relationshipName>Tax_Items</relationshipName>
    <type>Lookup</type>
</CustomField>