unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Tax_Locale__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Tax_Locale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the Item to the tax locale.</description>
    <inlineHelpText>Links the Item to the tax locale.</inlineHelpText>
    <label>Tax Locale</label>
    <referenceTo>OrderApi__Tax_Locale__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>