unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Tax_Percent__c</fullName>
    <description>The rate to be used to calculate the tax amount assigned to taxable items.</description>
    <inlineHelpText>The rate to be used to calculate the tax amount assigned to taxable items.</inlineHelpText>
    <label>Tax Percent</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>