unpackaged/main/default/objects/OrderApi__Item__c/fields/OrderApi__UPC__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__UPC__c</fullName>
    <description>A UPC (Universal Product Code) is a 13 digit catalog number uniquely assigned to an Item required to generate UPC barcodes.</description>
    <inlineHelpText>A UPC (Universal Product Code) is a 13 digit catalog number uniquely assigned to an Item required to generate UPC barcodes.</inlineHelpText>
    <label>UPC</label>
    <length>12</length>
    <type>Text</type>
</CustomField>