unpackaged/main/default/objects/OrderApi__Item__c/fields/ProgramApi__Is_Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Is_Program_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines this item that will create a program profile as a result of purchasing/invoicing this item.</description>
    <inlineHelpText>Defines this item that will create a program profile as a result of purchasing/invoicing this item.</inlineHelpText>
    <label>Is Program Candidacy Fee</label>
    <type>Checkbox</type>
</CustomField>